[package]
name = "big_sync"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
path = "lib.rs"

[features]
test-support = ["big_sync_core/test-support"]

[dependencies]
#
# internal
utils_rs = { workspace = true, features = ["hash"] }
big_sync_core.workspace = true

#
# ds
surelock.workspace = true

#
# encoding
serde.workspace = true

#
# error
thiserror.workspace = true

#
# macros
structstruck.workspace = true

#
# async
tokio-util.workspace = true
future_form.workspace = true
rand.workspace = true
futures-buffered.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "rt", "rt-multi-thread", "time", "tracing"] }

#
# db
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"] }
sqlx_utils_rs.workspace = true

#
# actors
irpc.workspace = true
iroh = { workspace = true }
irpc-iroh.workspace = true

#
# log
tracing.workspace = true

[dev-dependencies]
big_sync_core = { workspace = true, features = ["test-support"] }
blake3.workspace = true
tempfile.workspace = true
