[package]
name = "big_sync_core"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
path = "lib.rs"

[features]
default = ["uniffi", "test-support", "automerge"]
uniffi = ["dep:uniffi"]
automerge = ["dep:autosurgeon"]
test-support = []

[dependencies]
utils_rs = { workspace = true, features = ["hash"] }

rand.workspace = true

structstruck.workspace = true

#
# encoding
bs58.workspace = true
serde.workspace = true
siphasher = "1.0.3"
autosurgeon = { workspace = true, optional = true }

#
# errors
thiserror.workspace = true

#
# async
# tokio-util.workspace = true
async-channel.workspace = true
futures.workspace = true
future_form.workspace = true

#
# logging
tracing.workspace = true

#
# ffi
uniffi = { workspace = true, optional = true }
