[package]
name = "btress_api"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[features]
default = ["serde"]
serde = []
censor_internal_errors = []

[dependencies]
#
# internal
utils_rs.workspace = true
api_utils_rs.workspace = true

#
# async
async-trait.workspace = true
tokio.workspace = true

#
# encoding
serde.workspace = true
serde_json.workspace = true

#
# ds
garde.workspace = true

#
# error
thiserror.workspace = true
displaydoc.workspace = true

#
# wit
wit-bindgen.workspace = true
