[package]
name = "btress_http"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
#
# internal
utils_rs.workspace = true
api_utils_rs.workspace = true

#
# error
thiserror.workspace = true

#
# wit
wit-bindgen.workspace = true

#
# http
axum = { workspace = true, features = [
  "form", "json", "macros", "multipart", "query", "original-uri",
  "query", "tower-log", "tracing", "matched-path", 
  ] }
tower.workspace = true
http.workspace = true
