[package]
name = "daybook_api"
version.workspace = true
edition.workspace = true

[package.metadata.cargo-machete]
ignored = ["serde"]

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[features]
default = ["utoipa", "serde"]
serde = []
utoipa = []
automerge = []
uniffi = []
censor_internal_errors = []

[dependencies]
#
# internal
utils_rs.workspace = true
api_utils_rs.workspace = true
daybook_types = { workspace = true, features = ["wit"] }

#
# async
async-trait.workspace = true

#
# encoding
serde.workspace = true
serde_json.workspace = true

#
# ds
garde.workspace = true

#
# error
thiserror.workspace = true
displaydoc.workspace = true

#
# wit
wit-bindgen.workspace = true
