[package]
name = "daybook_cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "daybook"
path = "main.rs"

[dependencies]
clap = { workspace = true, features = ["derive", "env", "string"] }
clap_complete.workspace = true
comfy-table = "7.2"

dotenv-flow.workspace = true
directories = "6.0.0"

utils_rs = { workspace = true, features = ["native"] }
daybook_core = { workspace = true }
daybook_types = { workspace = true }

tokio = { workspace = true, features = ["rt-multi-thread", "fs", "time"] }

color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"] }

serde = { workspace = true }
serde_json.workspace = true

automerge.workspace = true
autosurgeon = { workspace = true, features = ["uuid"] }
samod = { workspace = true, features = ["tokio"] }

fuser = { version = "0.16", features = ["abi-7-31"] }

parking_lot = "0.12"
libc = "0.2"
struct-patch = "0.10"

scopeguard.workspace = true

[dev-dependencies]
tempfile = "3.10"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }

