[package]
name = "daybook_core"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "daybook_core"
path = "lib.rs"

[features]
default = ["uniffi"]
uniffi = ["dep:uniffi"]
test-support = ["dep:tempfile"]

[dependencies]
#
# internal
am_utils_rs = { workspace = true, features = ["repo", "iroh"] }
api_utils_rs = { workspace = true, features = ["automerge"] }
daybook_types = { workspace = true, features = [
    "automerge",
    "uniffi",
    "wit",
    "schemars",
    "manifest"
] }
mltools = { workspace = true, features = ["hf_hub", "tests"] }
utils_rs = { workspace = true, features = ["hash", "native", "downloader"] }
wash_plugin_mltools.workspace = true
wash_plugin_utils.workspace = true
wash_plugin_wflow.workspace = true
wflow = { workspace = true }

#
# encoding
serde.workspace = true
serde_json.workspace = true
zstd.workspace = true
sha2 = "0.10.9"
semver.workspace = true

#
# error
anyhow.workspace = true
color-eyre.workspace = true
displaydoc.workspace = true
thiserror.workspace = true

#
# log
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-unwrap.workspace = true

#
# ds
once_cell.workspace = true
time.workspace = true
url.workspace = true
garde.workspace = true
struct-patch.workspace = true
data-encoding.workspace = true
bs58.workspace = true
addr.workspace = true

#
# async
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "fs",
] }
tokio-util.workspace = true
futures = { workspace = true }
async-trait.workspace = true
tokio-stream = "0.1.18"
futures-buffered = { version = "0.2.13", features = ["tokio-coop"] }

#
# ffi
uniffi = { workspace = true, features = ["cli"] }

#
# sync
autosurgeon = { workspace = true, features = ["uuid"] }
automerge = { workspace = true }
samod = { workspace = true, features = ["tokio", "tungstenite-rustls-webpki-roots"] }

#
# http
reqwest.workspace = true
oci-client = { version = "0.15.0", default-features = false, features = ["rustls-tls-native-roots"] }
oci-spec = "0.8.4"
oci-wasm = { version = "0.3.0", default-features = false, features = ["rustls-tls"] }

#
# db
sqlx = { workspace = true, features = ["sqlite"] }
sqlite-vec.workspace = true
# used directly by src/daybook_core/lib.rs for sqlite extension registration
libsqlite3-sys = "0.30.1"

#
# misc
pastey.workspace = true
image = { version = "0.25", default-features = true, features = ["jpeg", "png", "gif", "webp", "bmp"] }
scopeguard.workspace = true

#
# wasm
wash-runtime = { workspace = true }
wasmtime = { workspace = true }

#
# schema
schemars = { version = "1.2", features = [
    "uuid1",
    "semver1",
    "url2",
    "jiff02",
    "indexmap2",
] }
jsonschema = { version = "0.42.0", default-features = false }

#
# sync
iroh = { workspace = true }
iroh-tickets = "0.3.0"
iroh-blobs = "0.98.0"
iroh-docs = "0.96.0"
iroh-gossip = "0.96.0"

#
# os
directories.workspace = true
fs4.workspace = true
rand.workspace = true
keyring = "3.6.3"
irpc-iroh = "0.12.0"
irpc = "0.12.0"
tempfile = { workspace = true, optional = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"], optional = true }
zstd.workspace = true
# wasmtime.workspace = true

[dev-dependencies]
tokio-util = { workspace = true }
wflow = { workspace = true, features = ["test-harness"] }
insta = { workspace = true, features = ["json"] }
tempfile.workspace = true
loom.workspace = true
