[package]
name = "daybook_core"
version.workspace = true
edition.workspace = true

[package.metadata.cargo-machete]
ignored = ["async-trait"]

[lints]
workspace = true

[lib]
name = "daybook_core"
path = "lib.rs"

[features]
default = ["uniffi"]
uniffi = ["dep:uniffi"]
test-support = ["dep:tempfile"]

[dependencies]
#
# internal
am_utils_rs = { workspace = true }
api_utils_rs = { workspace = true, features = ["automerge"] }
daybook_types = { workspace = true, features = [
    "uniffi",
    "wit",
    "schemars",
    "manifest"
] }
daybook_pdk = { workspace = true }
mltools = { workspace = true, features = ["hf_hub", "tests"] }
utils_rs = { workspace = true, features = ["hash", "native", "downloader"] }
wash_plugin_mltools.workspace = true
wash_plugin_utils.workspace = true
wash_plugin_wflow.workspace = true
wflow = { workspace = true }
big_sync.workspace = true
big_sync_core = { workspace = true, features = ["automerge", "uniffi"] }
big_repo.workspace = true

#
# encoding
serde.workspace = true
serde_json.workspace = true
zstd.workspace = true
sha2 = "0.10.9"
blake3.workspace = true
semver.workspace = true

#
# error
anyhow.workspace = true
displaydoc.workspace = true
thiserror.workspace = true

#
# log
tracing.workspace = true

#
# ds
url.workspace = true
garde.workspace = true
struct-patch.workspace = true
surelock.workspace = true

#
# async
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "fs",
] }
tokio-util.workspace = true
futures = { workspace = true }
async-trait.workspace = true
async-channel = "2.5"
futures-buffered = { version = "0.2.13", features = ["tokio-coop"] }

#
# ffi
uniffi = { workspace = true, features = ["cli"] }

#
# sync
autosurgeon = { workspace = true, features = ["uuid"] }
automerge = { workspace = true }

#
# http
oci-client = { version = "0.15.0", default-features = false, features = ["rustls-tls-native-roots"] }
oci-spec = "0.8.4"

#
# db
sqlx = { workspace = true, features = ["sqlite"] }
sqlite-vec.workspace = true
# used directly by src/daybook_core/lib.rs for sqlite extension registration
libsqlite3-sys = "0.30.1"

#
# misc
image = { version = "0.25", default-features = true, features = ["jpeg", "png", "gif", "webp", "bmp"] }

#
# wasm
wash-runtime = { workspace = true }
wasmtime = { workspace = true }

#
# schema
schemars = { version = "1.2", features = [
    "uuid1",
    "semver1",
    "url2",
    "jiff02",
    "indexmap2",
] }
jsonschema = { version = "0.42.0", default-features = false }

#
# networks
iroh = { workspace = true }
iroh-tickets.workspace = true
iroh-blobs.workspace = true
iroh-docs.workspace = true
iroh-gossip.workspace = true

#
# actors
irpc-iroh.workspace = true
irpc.workspace = true

#
# os
directories.workspace = true
fs4.workspace = true
rand.workspace = true
keyring-core = { version = "1.0", default-features = false }
tempfile = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
zbus-secret-service-keyring-store = { version = "1.0", features = ["rt-tokio-crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0", features = ["keychain"] }

[target.'cfg(target_os = "ios")'.dependencies]
apple-native-keyring-store = { version = "1.0", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { version = "1.0" }

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = { version = "1.0" }

[build-dependencies]
uniffi = { workspace = true, features = ["build"], optional = true }
zstd.workspace = true
# wasmtime.workspace = true

[dev-dependencies]
big_sync = { workspace = true, features = ["test-support"] }
tokio-util = { workspace = true }
wflow = { workspace = true, features = ["test-harness"] }
insta = { workspace = true, features = ["json"] }
tempfile.workspace = true
loom.workspace = true
