[package]
name = "daybook_ffi"
version.workspace = true
edition.workspace = true

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "daybook_ffi"
path = "lib.rs"

[dependencies]
# internal
utils_rs = { workspace = true, features = ["hash"] }
daybook_core = { workspace = true, features = ["uniffi"] }
daybook_types = { workspace = true, features = ["uniffi"] }

# serde
serde.workspace = true
serde_json.workspace = true
api_utils_rs.workspace = true

# error
color-eyre.workspace = true
thiserror.workspace = true
displaydoc.workspace = true

# log
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-unwrap.workspace = true

# ds
once_cell.workspace = true
time.workspace = true
rust_decimal = "1.37.2"
parking_lot.workspace = true
url.workspace = true
garde.workspace = true


# async
tokio = { workspace = true, features = ["rt-multi-thread","sync", "macros", "fs"] }
futures = { workspace = true }

# ffi
uniffi = { workspace = true, features = ["cli"] }

# sync
autosurgeon = { workspace = true, features = ["uuid"] }
automerge = { workspace = true }
samod = { workspace = true, features = ["tokio", "tungstenite"] }

sqlx = { workspace = true, features = ["sqlite"] }

pastey = "0.1"
struct-patch = "0.10.4"
directories = "6.0.0"

[build-dependencies]
uniffi = { workspace = true, features = [ "build" ] }

[features]
