[package]
name = "daybook_ffi"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "daybook_ffi"
path = "lib.rs"

[dependencies]
# internal
utils_rs = { workspace = true, features = ["hash"] }
am_utils_rs = { workspace = true, default-features = false }
daybook_core = { workspace = true, features = ["uniffi"] }
daybook_types = { workspace = true, features = ["uniffi"] }
mltools = { workspace = true, features = ["hf_hub"] }

# serde
serde.workspace = true
serde_json.workspace = true
api_utils_rs.workspace = true

# error
thiserror.workspace = true
displaydoc.workspace = true

# log
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-unwrap.workspace = true

# ds
once_cell.workspace = true
time.workspace = true
parking_lot.workspace = true
url.workspace = true
garde.workspace = true


# async
tokio = { workspace = true, features = ["rt-multi-thread","sync", "macros", "fs"] }
tokio-util.workspace = true
futures = { workspace = true }
regex = "1"

# ffi
uniffi = { workspace = true, features = ["cli"] }

# sync
autosurgeon = { workspace = true, features = ["uuid"] }
automerge = { workspace = true }
samod = { workspace = true, features = ["tokio", "tungstenite"] }

sqlx = { workspace = true, features = ["sqlite"] }

pastey.workspace = true
directories.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = [ "build" ] }

[features]
default = ["nokhwa"]
nokhwa = ["dep:nokhwa"]

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
nokhwa = { version = "0.10.10", default-features = false, features = ["input-native", "output-threaded", "decoding"], optional = true }
