[package]
name = "daybook_http"
version.workspace = true
edition.workspace = true

[package.metadata.cargo-machete]
ignored = ["serde"]

[lints]
workspace = true

[features]
default = ["utoipa", "serde"]
serde = []
utoipa = []
automerge = []
uniffi = []

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
#
# internal
utils_rs.workspace = true
api_utils_rs.workspace = true
macros.workspace = true
daybook_types = { workspace = true, features = ["wit"] }

#
# encoding
serde.workspace = true

#
# error
thiserror.workspace = true
displaydoc.workspace = true

#
# wit
wit-bindgen.workspace = true

#
# http
axum = { workspace = true, features = [
  "form", "json", "macros", "multipart", "query", "original-uri",
  "query", "tower-log", "tracing", "matched-path", 
  ] }
tower.workspace = true
http.workspace = true
