[package]
name = "daybook_pdk"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
path = "lib.rs"

[dependencies]
wflow_sdk = { workspace = true }
url.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
displaydoc.workspace = true
