[package]
name = "daybook_restate"
version.workspace = true
edition.workspace = true

[dependencies]
genai = "0.4.1"
llm = "1.3.4"
restate-sdk = { version = "0.7.0" }

# ds
multihash.workspace = true

# serde
serde.workspace = true

tokio = { workspace = true, features = ["full"] }

utils_rs = { workspace = true, features = ["automerge", "hash"] }
api_utils_rs.workspace = true

# error
color-eyre.workspace = true
thiserror.workspace = true
displaydoc.workspace = true

# sync
autosurgeon = { workspace = true, features = ["uuid"] }
automerge = { workspace = true }
samod = { workspace = true, features = ["tokio", "tungstenite"] }

[[bin]]
name = "app"
path = "main.rs"
