[package]
name = "daybook_sync"
version.workspace = true
edition.workspace = true

[[bin]]
name = "daybook_sync"
path = "main.rs"

[dependencies]
api_utils_rs.workspace = true
utils_rs = { workspace = true, features = ["automerge"] }

autosurgeon = { workspace = true, features = ["uuid"] }
automerge = { workspace = true }
samod = { workspace = true, features = ["tokio", "tungstenite", "axum"] }

serde.workspace = true

http.workspace = true
axum = { workspace = true, features = ["form", "json", "macros", "multipart", "query", "original-uri", "query", "tower-log", "tracing", "matched-path", "ws", "tokio", "http2"] }
axum-extra = { workspace = true, features = [] }
tower.workspace = true
tower-http = { workspace = true, features = ["full"] }

tokio = { workspace = true, features = ["rt-multi-thread", "net", "sync", "time", "fs", "parking_lot"] }

garde.workspace = true

thiserror.workspace = true
displaydoc.workspace = true

macros.workspace = true
