[package]
name = "daybook_types"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "daybook_types"
path = "lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["automerge", "uniffi", "wit"]
automerge = ["dep:autosurgeon", "dep:automerge"]
uniffi = ["dep:uniffi", "dep:uuid"]
wit = ["dep:wit-bindgen"]
schemars = ["dep:schemars"]

[dependencies]
# encoding
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
data-encoding.workspace = true
struct-patch.workspace = true
schemars = { version = "1.2", features = [
    "uuid1",
    "semver1",
    "url2",
    "jiff02",
    "indexmap2",
], optional = true }

# internal
api_utils_rs = { workspace = true, default-features = false }
utils_rs = { workspace = true, default-features = false }
am_utils_rs = { workspace = true, default-features = false }

# error
thiserror.workspace = true
displaydoc.workspace = true

# time (needed for root Doc type)
time = { workspace = true, features = ["serde"] }

# automerge
autosurgeon = { workspace = true, features = ["uuid"], optional = true }
automerge = { workspace = true, optional = true }

# ffi
uniffi = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

# wit
wit-bindgen = { workspace = true, optional = true }

pastey.workspace = true
# os
addr.workspace = true
blake3.workspace = true
