[package]
name = "daybook_types"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "daybook_types"
path = "lib.rs"
crate-type = ["rlib"]

[features]
default = ["uniffi", "wit", "manifest"]
uniffi = ["dep:uniffi", "dep:uuid"]
wit = []
schemars = ["dep:schemars"]
manifest = ["dep:garde", "dep:semver", "schemars"]

[dependencies]
#
# internal
api_utils_rs = { workspace = true, default-features = false }
utils_rs = { workspace = true, default-features = false }
am_utils_rs = { workspace = true }

#
# encoding
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
data-encoding.workspace = true
schemars = { version = "1.2", features = [
    "uuid1",
    "semver1",
    "url2",
    "jiff02",
    "indexmap2",
], optional = true }

#
# error
thiserror.workspace = true
displaydoc.workspace = true

#
# ds
garde = { workspace = true, optional = true }
semver = { workspace = true, optional = true }

#
# automerge
autosurgeon = { workspace = true, features = ["uuid"] }
automerge = { workspace = true }

#
# ffi
uniffi = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

#
# macros
pastey.workspace = true

#
# os
addr.workspace = true
blake3.workspace = true
camino.workspace = true
jsonpath-rust = "1.0.4"
