[package]
name = "daybook_wflows"
version.workspace = true
edition.workspace = true

[package.metadata.cargo-machete]
ignored = ["color-eyre"]

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
#
# internal
api_utils_rs.workspace = true
am_utils_rs.workspace = true
wflow_sdk.workspace = true
daybook_types = { workspace = true, features = ["wit"] }

# genai = "0.4.1"
# llm = "1.3.4"

#
# error
color-eyre.workspace = true

#
# wit
wit-bindgen.workspace = true
