[package]
name = "daybook_willow"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
path = "lib.rs"

[dependencies]
#
# internal
utils_rs = { workspace = true, features = ["hash"] }
big_sync_core.workspace = true

willow25 = { git = "https://codeberg.org/worm-blossom/willow_rs/", crate = "willow25" }
ufotofu = { version = "0.12.1" }
bab_rs = "0.5.0"
