[package]
name = "daybook_xilem"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
# internal
utils_rs = { workspace = true, features = ["hash"] }
am_utils_rs = { workspace = true }
daybook_core = { workspace = true, features = ["uniffi"] }
daybook_types = { workspace = true, features = ["uniffi"] }
mltools = { workspace = true, features = ["hf_hub"] }

# ui

xilem.workspace = true

# This makes the examples discoverable to (e.g.) Android GPU inspector without needing to provide the full name manually.
# Do not use when releasing a production app.
[package.metadata.android.application]
debuggable = true
# cargo apk2 needs this for some reason
has_code = true

[[package.metadata.android.application.activity]]
name = "android.app.NativeActivity"

[[package.metadata.android.application.activity.meta_data]]
name = "android.app.lib_name"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.VIEW", "android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]

[package.metadata.android.signing.release]
path = "/home/asdf/.android/debug.keystore"
keystore_password = "android"
