[package]
name = "granary_web"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "granary_web"
path = "main.rs"

[lib]
path = "lib.rs"

[dependencies]
console_error_panic_hook = "0.1.7"
gloo = { workspace = true, features = ["net"] }
leptos = { workspace = true, features = ["csr"] }
leptos_router = { workspace = true }
serde_json.workspace = true
