[package]
name = "mltools"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "mltools"
path = "lib.rs"

[features]
default = ["hf_hub"]
hf_hub = [
  "dep:hf-hub",
  "dep:fs4",
  "dep:directories",
  "tokio/fs",
  "tokio/io-util",
]
tests = []

[dependencies]
utils_rs = { workspace = true, default-features = false, features = ["downloader"] }
api_utils_rs = { workspace = true, default-features = false }

serde.workspace = true

wit-bindgen.workspace = true

bon.workspace = true

# async
tokio = { workspace = true, features = ["rt"] }

# ml
ollama-rs = { version = "0.3.4", default-features = false, features = ["rustls"] }
url.workspace = true
hf-hub = { version = "0.4.3", default-features = false, features = ["tokio"], optional = true }

# os
fs4 = { workspace = true, optional = true }
directories = { workspace = true, optional = true }

reqwest.workspace = true
data-encoding.workspace = true
nalgebra = "0.34.1"

[target.'cfg(target_os = "android")'.dependencies]
oar-ocr = { git = "https://github.com/GreatV/oar-ocr", version = "0.6.1", default-features = false }
fastembed = { version = "5.8.1", default-features = false, features = ["ort-load-dynamic", "image-models"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
oar-ocr = { git = "https://github.com/GreatV/oar-ocr", version = "0.6.1" }
fastembed = { version = "5.8.1", default-features = false, features = ["ort-download-binaries", "image-models"] }
